MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/Relix_Document_Map__mdt.object-meta.xml
<CustomObject>
    <description>Which Relix documents Salesforce downloads, and where each file is filed (a MODON Documents__c checklist row or the Relix case row). Read by RelixDocumentMapper. Download only with RELIX_DOWNLOAD_DOCS on.</description>
    <label>Relix Document Map</label>
    <pluralLabel>Relix Document Maps</pluralLabel>
</CustomObject>