MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only active rows are used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>