MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Documents_Name__c.field-meta.xml
<CustomField>
    <fullName>Documents_Name__c</fullName>
    <description>Name of the MODON Documents__c row to file on (e.g. Passport). Blank = file on the Relix case row.</description>
    <label>Documents Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>