MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Download this document into Salesforce. Unticked = listed but SKIPPED.</description>
    <label>Download</label>
    <type>Checkbox</type>
</CustomField>