MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Match_On__c.field-meta.xml
<CustomField>
    <fullName>Match_On__c</fullName>
    <description>Which Relix attribute Relix_Type__c is compared with (case-insensitive): TYPE for /buyer documents and certificates, NAME = documentName, LABEL = documentLabel.</description>
    <label>Match On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TYPE</fullName>
            </value>
            <value>
                <fullName>NAME</fullName>
            </value>
            <value>
                <fullName>LABEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>