MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Max_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Max_Bytes__c</fullName>
    <description>Per-document size cap; blank = RELIX_DOC_MAX_BYTES.</description>
    <label>Max Bytes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>