MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Personas__c.field-meta.xml
<CustomField>
    <fullName>Personas__c</fullName>
    <description>Comma-separated personas. Blank = all.</description>
    <label>Personas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>