MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Relix_Type__c.field-meta.xml
<CustomField>
    <fullName>Relix_Type__c</fullName>
    <description>What to match: a /buyer document type (passport_image, uaekyc_certificate, ...), an upload documentName or label, or KYC_CERTIFICATE / CASE_CERTIFICATE.</description>
    <label>Relix Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>