MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where Relix listed the document.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUYER</fullName>
            </value>
            <value>
                <fullName>CASE_UPLOAD</fullName>
            </value>
            <value>
                <fullName>CERTIFICATE</fullName>
            </value>
            <value>
                <fullName>KYB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>