MODON MRE BPDEV/force-app/main/default/objects/Relix_Document_Map__mdt/fields/Target_Record__c.field-meta.xml
<CustomField>
    <fullName>Target_Record__c</fullName>
    <description>Whose checklist row receives the file.</description>
    <label>Target Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERSON_ACCOUNT</fullName>
            </value>
            <value>
                <fullName>POA_CONTACT</fullName>
            </value>
            <value>
                <fullName>COMPANY_ACCOUNT</fullName>
            </value>
            <value>
                <fullName>CASE_ROW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>